新增返回值，错误日志功能
