# docs/swagger.yaml
@@ -51,6 +51,41 @@ paths:
           schema:
             type: string
       summary: 获取token
+  /api/v1/user:
+    post:
+      parameters:
+      - description: ' 用户名'
+        in: formData
+        name: user_name
+        required: true
+        type: string
+      - description: ' 手机号'
+        in: formData
+        name: mobile
+        required: true
+        type: string
+      - description: ' 密码'
+        in: formData
+        name: password
+        required: true
+        type: string
+      - description: ' 邮箱'
+        in: formData
+        name: email
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+        "400":
+          description: 请求错误
+        "500":
+          description: 内部错误
+      summary: 新增用户
+      tags:
+      - 用户接口
   /api/v1/user/{id}:
     get:
       parameters:
